DOMjudge Programming Contest Judging System

Version 1.3.0 - SVN
-------------------

Version 1.3.0 Release Candidate 2 - 18 September 2006
-----------------------------------------------------
 - Large update and improvement of the documentation: more
   installation information, a quick-install checklist, FAQ
   is improved, example Apache configuration shipped and bugs
   fixed (Closes: #1560107).
 - Default hostname in MySQL privileges to '%' (all hosts), making
   sure that webinterface, command line and remote judgers can all
   connect (Closes: #1560108).
 - Change default memory limit in global.cfg to 512MB, since the Sun
   JVM consumes 200 MB by itself.
 - chmod uploaded files so the websubmitdaemon can handle them
   even if the webserver has a restrictive umask.
 - Auto-focus the clarification textarea.
 - Bring lib.database.php up to date with latest upstream version.
 - Some miscellaneous minor tweaks.

Version 1.3.0 Release Candidate 1 - 15 September 2006
-----------------------------------------------------
 - Added a separate script for extra setup of the chroot environment
   and pass memory limit to Sun Java run script for better javac/java
   support (Closes: #1508663).
 - Added script to generate Java chroot environment from Debian sources.
 - Added toggle buttons in jury interface for allowing submission
   and judging per problem and language.
 - Added option to enter verifier's name in jury interface.
 - Changed config option SUBM_VERIFY to VERIFICATION_REQUIRED and
   disabled "off" choice.
 - Fixed some more HTML to be fully XHTML 1.0 Strict compliant.
 - Included sources to comply with licences of included programs.
 - Multiple other small fixes and enhancements.

Version 1.2.0 - 26 June 2006
----------------------------
 - Added websubmit (Closes: #1103084).
 - Added support for team passwords (generating and validating).
 - Added team status light to jury teams overview (Closes: #1441783).