@@ -2,6 +2,8 @@ DOMjudge Programming Contest Judging System
 
 Version 1.3.0 - SVN
 -------------------
+ - Fix balloons notification for new database layout introduced
+   in 1.1.0; thanks Lennert Buytenhek for the patch.
 
 Version 1.3.0 Release Candidate 2 - 18 September 2006
 -----------------------------------------------------
